--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 
         <spring-data-jdbc.version>1.2.1.RELEASE</spring-data-jdbc.version>
+        <spring-cloud-contract.version>1.1.1.RELEASE</spring-cloud-contract.version>
 		<cobertura.version>2.7</cobertura.version>
 
         <start-class>org.springframework.samples.petclinic.PetClinicApplication</start-class>
@@ -159,6 +160,15 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-contract-spec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-verifier</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -185,6 +195,17 @@
                     <clearOutputDir>false</clearOutputDir>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+                <version>1.1.1.RELEASE</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <contractsDirectory>src/test/resources/contracts</contractsDirectory>
+                    <contractsWorkOffline>true</contractsWorkOffline>
+                    <baseClassForTests>org.springframework.samples.petclinic.contract.ContractBase</baseClassForTests>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
     <reporting>
@@ -204,5 +225,23 @@
             </plugin>
         </plugins>
     </reporting>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-contract-dependencies</artifactId>
+                <version>${spring-cloud-contract.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Dalston.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <url>demopetclinic</url>
 </project>
